--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="ui grid">
     <div class="four wide column">
-        <h1 class="ui black header">
+        <h1 class="ui header black title">
             Utraffic Visualiser
         </h1>
     </div>
@@ -27,9 +27,15 @@
         </div>
     </div>
 </div>
+<div id="graphingArea" style="margin: 30px">
+
+</div>
 </body>
 <script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
-<script type="text/javascript" src="/static/js/data_fetcher.js"></script>
+<script type="text/javascript" src="/static/js/models/series.js"></script>
+<script type="text/javascript" src="/static/js/data_engine.js"></script>
+<script type="text/javascript" src="/static/js/libraries/d3.v3.min.js"></script>
+<script type="text/javascript" src="/static/js/index.js"></script>
 </html>
 
 {#    <h2>The birth of awesomeness</h2>#}
