--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,44 +2,17 @@
 <html>
 <head>
     <title>Utraffic Visualiser</title>
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700'
-          rel='stylesheet' type='text/css'>
     <link href="/static/css/semantic/packaged/css/semantic.min.css" rel="stylesheet" media="screen">
 </head>
 <body>
 <div class="ui grid">
-    <div class="four wide column">
-        <h1 class="ui header black title">
-            Utraffic Visualiser
-        </h1>
+    <div id="objectsBar" class="four wide column">
+        <div class="ui segment"></div>
     </div>
-    <div class="twelve wide right floated column">
-        <div class="ui fluid menu inverted">
-            <a class="item">
-                <i class="teal play icon"></i>
-            </a>
-            <a class="item">
-                <i class="icon pause"></i>
-            </a>
-            <a class="item">
-                <i class="red stop icon"></i>
-            </a>
-        </div>
+    <div id="graphingArea" class="twelve wide column">
+        <div class="ui segment"></div>
     </div>
-</div>
-<div id="graphingArea" style="margin: 30px">
-
 </div>
 </body>
 <script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
-<script type="text/javascript" src="/static/js/models/series.js"></script>
-<script type="text/javascript" src="/static/js/data_engine.js"></script>
-<script type="text/javascript" src="/static/js/libraries/d3.v3.min.js"></script>
-<script type="text/javascript" src="/static/js/index.js"></script>
 </html>
-
-{#    <h2>The birth of awesomeness</h2>#}
-{#    <h2>Data Point: {{ data_point }}</h2>#}
-{#    <div style="width: 1000px; height: 400px; border: solid;">#}
-{#        <div id="data">Data: </div>#}
-{#    </div>#}
