--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,16 +3,36 @@
 <head>
     <title>Utraffic Visualiser</title>
     <link href="/static/css/semantic/packaged/css/semantic.min.css" rel="stylesheet" media="screen">
+    <script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
+    <script type="text/javascript" src="/static/css/semantic/packaged/javascript/semantic.js"></script>
 </head>
 <body>
 <div class="ui grid">
-    <div id="objectsBar" class="four wide column">
-        <div class="ui segment"></div>
+    <div id="controlsAndObjects" class="four wide column">
+        <div id="controls" class="ui row">
+            <div id="playPause" class="ui mini labeled icon button">
+                <i class="teal play icon"></i>Start
+            </div>
+            <div id="stop" class="ui mini labeled icon button">
+                <i class="red stop icon"></i>Stop
+            </div>
+        </div>
+        <div id="objectsBar" class="row" style="margin-top: 20px">
+            <div class="ui secondary pointing menu">
+                <a id="simObjectsMenuItem" class="active item">Objects
+                    <div id="numberOfObjectsLabel" class="ui label teal">10</div>
+                </a>
+                <a id="visualisationsMenuItem" class="item">Visualisations
+                    <div id="numberOfVisualisationsLabel" class="ui label">2</div>
+                </a>
+            </div>
+        </div>
     </div>
+
     <div id="graphingArea" class="twelve wide column">
         <div class="ui segment"></div>
     </div>
 </div>
+
 </body>
-<script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
 </html>
