--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,10 +1,8 @@
 <!doctype HTML>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <title>Utraffic Visualiser</title>
     <link href="/static/css/semantic/packaged/css/semantic.min.css" rel="stylesheet" media="screen">
-    <script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
-    {#    <script type="text/javascript" src="/static/css/semantic/packaged/javascript/semantic.js"></script>#}
 </head>
 <body>
 <h3 class="ui block header">Utraffic Visualiser</h3>
@@ -65,8 +63,20 @@
             </div>
         </div>
     </div>
-    <div id="graphingArea" class="twelve wide column"></div>
+    <div id="graphingArea" class="twelve wide column">
+        <div class="ui two column grid" style="height: 350px;">
+            <div class="column" style="height: 330px; background: teal;">
+                <div id="vis1"></div>
+            </div>
+            <div class="column" style="height: 330px; background-color: orange;"></div>
+        </div>
+        <div class="ui two column grid" style="height: 350px;">
+            <div class="column" style="height: 330px; background-color: orange"></div>
+            <div class="column" style="height: 330px; background-color: teal"></div>
+        </div>
+    </div>
 </div>
-
+<script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
+<script type="text/javascript" src="/static/js/index.js"></script>
 </body>
 </html>
