[nim] Cleared coloring off vehicle properties buttons and added index.js so we can have a working version

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,10 +38,11 @@
                     </div>
                     <div id="objectId" class="two wide column">1</div>
                     <div class="ten wide column objectProperties">
-                        <div id="velocity" class="tiny teal ui button objectProperty">vel</div>
+                        <div id="velocity" class="tiny ui button objectProperty">vel</div>
                         <div id="velocity" class="tiny ui button objectProperty">acc</div>
-                        <div id="velocity" class="tiny teal ui button objectProperty">pos</div>
+                        <div id="velocity" class="tiny ui button objectProperty">pos</div>
                         <div id="velocity" class="tiny ui button objectProperty">lane</div>
+                        <div id="velocity" class="tiny red ui button objectProperty">all</div>
                     </div>
                 </div>
                 <div class="ui grid item simObject">
@@ -50,10 +51,11 @@
                     </div>
                     <div id="objectId" class="two wide column">2</div>
                     <div class="ten wide column objectProperties">
-                        <div id="velocity" class="tiny teal ui button objectProperty">vel</div>
+                        <div id="velocity" class="tiny ui button objectProperty">vel</div>
                         <div id="velocity" class="tiny ui button objectProperty">acc</div>
-                        <div id="velocity" class="tiny teal ui button objectProperty">pos</div>
+                        <div id="velocity" class="tiny ui button objectProperty">pos</div>
                         <div id="velocity" class="tiny ui button objectProperty">lane</div>
+                        <div id="velocity" class="tiny red ui button objectProperty">all</div>
                     </div>
                 </div>
                 <div class="ui grid item simObject">
@@ -62,10 +64,11 @@
                     </div>
                     <div id="objectId" class="two wide column">3</div>
                     <div class="ten wide column objectProperties">
-                        <div id="velocity" class="tiny teal ui button objectProperty">vel</div>
+                        <div id="velocity" class="tiny ui button objectProperty">vel</div>
                         <div id="velocity" class="tiny ui button objectProperty">acc</div>
-                        <div id="velocity" class="tiny teal ui button objectProperty">pos</div>
+                        <div id="velocity" class="tiny ui button objectProperty">pos</div>
                         <div id="velocity" class="tiny ui button objectProperty">lane</div>
+                        <div id="velocity" class="tiny red ui button objectProperty">all</div>
                     </div>
                 </div>
                 <div class="ui grid item simObject">
@@ -74,10 +77,11 @@
                     </div>
                     <div id="objectId" class="two wide column">4</div>
                     <div class="ten wide column objectProperties">
-                        <div id="velocity" class="tiny teal ui button objectProperty">vel</div>
+                        <div id="velocity" class="tiny ui button objectProperty">vel</div>
                         <div id="velocity" class="tiny ui button objectProperty">acc</div>
-                        <div id="velocity" class="tiny teal ui button objectProperty">pos</div>
+                        <div id="velocity" class="tiny ui button objectProperty">pos</div>
                         <div id="velocity" class="tiny ui button objectProperty">lane</div>
+                        <div id="velocity" class="tiny red ui button objectProperty">all</div>
                     </div>
                 </div>
                 <div class="ui grid item simObject">
@@ -86,10 +90,11 @@
                     </div>
                     <div id="objectId" class="two wide column">5</div>
                     <div class="ten wide column objectProperties">
-                        <div id="velocity" class="tiny teal ui button objectProperty">vel</div>
+                        <div id="velocity" class="tiny ui button objectProperty">vel</div>
                         <div id="velocity" class="tiny ui button objectProperty">acc</div>
-                        <div id="velocity" class="tiny teal ui button objectProperty">pos</div>
+                        <div id="velocity" class="tiny ui button objectProperty">pos</div>
                         <div id="velocity" class="tiny ui button objectProperty">lane</div>
+                        <div id="velocity" class="tiny red ui button objectProperty">all</div>
                     </div>
                 </div>
             </div>
