--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -101,23 +101,10 @@
         </div>
     </div>
     <div id="graphingArea" class="twelve wide column" style="height: 700px;">
-        <div class="ui two column grid visRow">
-            <div class="column visPane">
-                <div class="vis"></div>
-            </div>
-            <div class="column visPane">
-                <div class="vis"></div>
-            </div>
-        </div>
-        <div class="ui two column grid visRow">
-            <div id="vis3" class="column visPane">
-                <div class="vis"></div>
-            </div>
-            <div id="vis4" class="column visPane">
-                <div class="vis"></div>
-            </div>
-        </div>
+        {% include 'visualisations_row.html' %}
+        {% include 'visualisations_row.html' %}
     </div>
+</div>
 </div>
 <script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
 <script type="text/javascript" src="/static/js/index.js"></script>
