--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -32,71 +32,13 @@
                 </div>
             </div>
             <div class="ui divided list">
-                <div class="ui grid item simObject">
-                    <div class="two wide column">
-                        <i class="ui flipped truck icon"></i>
-                    </div>
-                    <div id="objectId" class="two wide column">1</div>
-                    <div class="ten wide column objectProperties">
-                        <div id="velocity" class="tiny ui button objectProperty">vel</div>
-                        <div id="velocity" class="tiny ui button objectProperty">acc</div>
-                        <div id="velocity" class="tiny ui button objectProperty">pos</div>
-                        <div id="velocity" class="tiny ui button objectProperty">lane</div>
-                        <div id="velocity" class="tiny red ui button objectProperty">all</div>
-                    </div>
-                </div>
-                <div class="ui grid item simObject">
-                    <div class="two wide column">
-                        <i class="ui flipped truck icon"></i>
-                    </div>
-                    <div id="objectId" class="two wide column">2</div>
-                    <div class="ten wide column objectProperties">
-                        <div id="velocity" class="tiny ui button objectProperty">vel</div>
-                        <div id="velocity" class="tiny ui button objectProperty">acc</div>
-                        <div id="velocity" class="tiny ui button objectProperty">pos</div>
-                        <div id="velocity" class="tiny ui button objectProperty">lane</div>
-                        <div id="velocity" class="tiny red ui button objectProperty">all</div>
-                    </div>
-                </div>
-                <div class="ui grid item simObject">
-                    <div class="two wide column">
-                        <i class="ui flipped truck icon"></i>
-                    </div>
-                    <div id="objectId" class="two wide column">3</div>
-                    <div class="ten wide column objectProperties">
-                        <div id="velocity" class="tiny ui button objectProperty">vel</div>
-                        <div id="velocity" class="tiny ui button objectProperty">acc</div>
-                        <div id="velocity" class="tiny ui button objectProperty">pos</div>
-                        <div id="velocity" class="tiny ui button objectProperty">lane</div>
-                        <div id="velocity" class="tiny red ui button objectProperty">all</div>
-                    </div>
-                </div>
-                <div class="ui grid item simObject">
-                    <div class="two wide column">
-                        <i class="ui flipped truck icon"></i>
-                    </div>
-                    <div id="objectId" class="two wide column">4</div>
-                    <div class="ten wide column objectProperties">
-                        <div id="velocity" class="tiny ui button objectProperty">vel</div>
-                        <div id="velocity" class="tiny ui button objectProperty">acc</div>
-                        <div id="velocity" class="tiny ui button objectProperty">pos</div>
-                        <div id="velocity" class="tiny ui button objectProperty">lane</div>
-                        <div id="velocity" class="tiny red ui button objectProperty">all</div>
-                    </div>
-                </div>
-                <div class="ui grid item simObject">
-                    <div class="two wide column">
-                        <i class="ui flipped truck icon"></i>
-                    </div>
-                    <div id="objectId" class="two wide column">5</div>
-                    <div class="ten wide column objectProperties">
-                        <div id="velocity" class="tiny ui button objectProperty">vel</div>
-                        <div id="velocity" class="tiny ui button objectProperty">acc</div>
-                        <div id="velocity" class="tiny ui button objectProperty">pos</div>
-                        <div id="velocity" class="tiny ui button objectProperty">lane</div>
-                        <div id="velocity" class="tiny red ui button objectProperty">all</div>
-                    </div>
-                </div>
+                {% include 'sim_object.html' %}
+                {% include 'sim_object.html' %}
+                {% include 'sim_object.html' %}
+                {% include 'sim_object.html' %}
+                {% include 'sim_object.html' %}
+                {% include 'sim_object.html' %}
+                {% include 'sim_object.html' %}
             </div>
         </div>
     </div>
