[nim] Extracted sim objects list from index template

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,15 +12,7 @@
         {% include 'sim_controls.html' %}
         <div class="ui segment">
             {% include 'sim_objects_control_menu.html' %}
-            <div class="ui divided list">
-                {% include 'sim_object.html' %}
-                {% include 'sim_object.html' %}
-                {% include 'sim_object.html' %}
-                {% include 'sim_object.html' %}
-                {% include 'sim_object.html' %}
-                {% include 'sim_object.html' %}
-                {% include 'sim_object.html' %}
-            </div>
+            {% include 'sim_objects_list.html' %}
         </div>
     </div>
     <div id="graphingArea" class="twelve wide column" style="height: 700px;">
