[nim] Extracted non-dynamic css out of javascript into index.css file

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Utraffic Visualiser</title>
     <link href="/static/css/semantic/packaged/css/semantic.min.css" rel="stylesheet" media="screen">
+    <link href="/static/css/index.css" rel="stylesheet" media="screen">
 </head>
 <body>
 <h3 class="ui block header">Utraffic Visualiser</h3>
