[nim] Extracted fade-in fade-out behaviour of visualisation panes into more compact css

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -3,3 +3,11 @@
     background-color: teal;
     opacity: 0.5;
 }
+.vis:hover {
+    opacity: 1;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+}
