[nim] Made add visualisation icons clickable (like buttons)

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -11,3 +11,9 @@
 .addVisSign {
     color: whitesmoke;
 }
+.addVisSign:hover {
+    cursor: pointer;
+}
+.addVisSign:active {
+    color: yellow;
+}
