[nim] Object properties now stick against the object when clicked.

--- a/app/templates/sim_object.html
+++ b/app/templates/sim_object.html
@@ -3,11 +3,8 @@
         <i class="ui flipped truck icon"></i>
     </div>
     <div class="two wide column">id</div>
-    <div class="ten wide column objectProperties">
-        <div id="velocity" class="tiny ui button objectProperty">vel</div>
-        <div id="velocity" class="tiny ui button objectProperty">acc</div>
-        <div id="velocity" class="tiny ui button objectProperty">pos</div>
-        <div id="velocity" class="tiny ui button objectProperty">lane</div>
-        <div id="velocity" class="tiny red ui button objectProperty">all</div>
-    </div>
+    <div class="tiny ui button objectProperty">vel</div>
+    <div class="tiny ui button objectProperty">acc</div>
+    <div class="tiny ui button objectProperty">pos</div>
+    <div class="tiny ui button objectProperty">lane</div>
 </div>
