--- a/app/templates/visualisation.html
+++ b/app/templates/visualisation.html
@@ -1,5 +1,5 @@
 <div class="column visPane">
     <div class="vis">
-        <i class="huge add sign icon addVisSign"></i>
+        <i class="big add icon addVisSign"></i>
     </div>
 </div>
