--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -5,9 +5,6 @@
     width: 100%;
     opacity: 0.8;
 }
-.objectProperties {
-    visibility: hidden;
-}
 .addVisSign {
     color: whitesmoke;
 }
@@ -16,4 +13,11 @@
 }
 .addVisSign:active {
     color: yellow;
+}
+
+.objectProperty {
+    visibility: hidden;
+}
+.objectPropertyTracked {
+    opacity: 0.8;
 }
