[nim] Separated visualisation place holder from the actual visualisation template

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,8 +1,9 @@
 .vis {
+
+}
+.visPlaceHolder {
     height: 320px;
     background-color: teal;
-    display: table;
-    width: 100%;
     opacity: 0.8;
 }
 .addVisSign {
