--- a/app/templates/visualisations_row.html
+++ b/app/templates/visualisations_row.html
@@ -1,4 +1,4 @@
 <div class="ui two column grid visRow">
-    {% include 'visualisation.html' %}
-    {% include 'visualisation.html' %}
+    {% include 'visualisation_placeholder.html' %}
+    {% include 'visualisation_placeholder.html' %}
 </div>
