--- a/app/templates/visualisation_placeholder.html
+++ b/app/templates/visualisation_placeholder.html
@@ -1,5 +1,5 @@
 <div class="column visPane">
-    <div class="vis">
+    <div class="visPlaceHolder">
         <i class="big add icon addVisSign"></i>
     </div>
 </div>
