--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,8 +17,9 @@
         </div>
     </div>
     <div id="graphingArea" class="twelve wide column" style="height: 700px;">
-        {% include 'visualisations_row.html' %}
-        {% include 'visualisations_row.html' %}
+        {% for visRow in range(2) %}
+            {% include 'visualisations_row.html' %}
+        {% endfor %}
     </div>
 </div>
 <script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
