[nim] Now dynamically assign ids to visualisation placeholder divs

--- a/app/templates/visualisations_row.html
+++ b/app/templates/visualisations_row.html
@@ -1,4 +1,4 @@
-<div id="visRow{{ visRow }}" class="two column ui grid visRow">
+<div id="{{ visRow }}" class="two column ui grid visRow">
     {% for vis in range(2) %}
         {% include 'visualisation_placeholder.html' %}
     {% endfor %}
