--- a/app/templates/visualisation.html
+++ b/app/templates/visualisation.html
@@ -1,2 +1,9 @@
 <div class="vis">
+    <div class="ui top right attached label">
+        <i class="plus icon maximiseVis"></i>
+        <i class="close icon closeVis"></i>
+    </div>
+    <div class="ui bottom left corner label visData">
+        <i class="setting icon"></i>
+    </div>
 </div>
