--- a/app/templates/visualisation.html
+++ b/app/templates/visualisation.html
@@ -1,9 +1,10 @@
 <div class="vis">
-    <div class="ui top right attached label">
+    <i class="large add icon addVisSign"></i>
+    <div class="ui top right attached label visControls" style="padding: .25em .6em; display: none">
         <i class="plus icon maximiseVis"></i>
         <i class="close icon closeVis"></i>
     </div>
-    <div class="ui bottom left corner label visData">
+    <div class="ui bottom left corner label visData" style="display: none">
         <i class="setting icon"></i>
     </div>
 </div>
