[nim] Using better looking textured background for visualisations

--- a/app/templates/visualisation.html
+++ b/app/templates/visualisation.html
@@ -2,7 +2,7 @@
     <i class="large add icon addVisSign"></i>
     <div class="ui top right attached label visControls showsOnlyOnVis">
         <i class="plus icon maximiseVis"></i>
-        <i class="close icon closeVis"></i>
+        <i class="close icon removeVis"></i>
     </div>
     <div class="ui top left corner label visData showsOnlyOnVis">
         <i class="setting icon"></i>
