--- a/app/templates/visualisation_front.html
+++ b/app/templates/visualisation_front.html
@@ -1,4 +1,4 @@
-<div class="vis">
+<div class="vis front">
     <i class="large add icon addVisSign"></i>
     <div class="ui top right attached label visControls showsOnlyOnVis">
         <i class="plus icon maximiseVis"></i>
