--- a/app/templates/visualisations_row.html
+++ b/app/templates/visualisations_row.html
@@ -1,8 +1,8 @@
 <div id="{{ visRow }}" class="two column ui grid visRow">
     {% for vis in range(2) %}
         <div class="column visPane">
-            {% include 'visualisation.html' %}
-            {% include 'visualisation_placeholder.html' %}
+            {% include 'visualisation_front.html' %}
+            {% include 'visualisation_back.html' %}
         </div>
     {% endfor %}
 </div>
