[nim] Added 'back to visualisation' link

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -5,6 +5,10 @@
     color: red;
     cursor: pointer;
 }
+.backToVis:hover {
+    color: teal;
+    cursor: pointer;
+}
 .maximiseVis:hover {
     color: teal;
     cursor: pointer;
