--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,5 +26,6 @@
 <script type="text/javascript" src="/static/js/data_engine.js"></script>
 <script type="text/javascript" src="/static/js/models/visualisation.js"></script>
 <script type="text/javascript" src="/static/js/index.js"></script>
+<script type="text/javascript" src="/static/js/debug.js"></script>
 </body>
 </html>
