--- a/app/templates/visualisation_back.html
+++ b/app/templates/visualisation_back.html
@@ -1,2 +1,5 @@
 <div class="vis back">
+    <div class="ui top right attached label visPaneControls">
+        <i class="signal icon backToVis"></i>
+    </div>
 </div>
