--- a/app/templates/visualisation_front.html
+++ b/app/templates/visualisation_front.html
@@ -1,6 +1,6 @@
 <div class="vis front">
     <i class="large add icon addVisSign"></i>
-    <div class="ui top right attached label visControls showsOnlyOnVis">
+    <div class="ui top right attached label visPaneControls showsOnlyOnVis">
         <i class="plus icon maximiseVis"></i>
         <i class="close icon removeVis"></i>
     </div>
