[nim] Moving visualisation series selection and key display to the front of the visualisation. The back pane will be used for seeting up more complex visualisations in the future

--- a/app/templates/visualisation_front.html
+++ b/app/templates/visualisation_front.html
@@ -1,10 +1,9 @@
 <div class="vis front">
     <i class="large add icon addVisSign"></i>
     <div class="ui top right attached label visPaneControls showsOnlyOnVis">
+        <i class="setting icon visData"></i>
         <i class="plus icon maximiseVis"></i>
         <i class="close icon removeVis"></i>
     </div>
-    <div class="ui top left corner label visData showsOnlyOnVis">
-        <i class="setting icon"></i>
-    </div>
+    <div class="ui bottom attached label">Key</div>
 </div>
