--- a/app/templates/visualisation_front.html
+++ b/app/templates/visualisation_front.html
@@ -5,5 +5,11 @@
         <i class="plus icon maximiseVis"></i>
         <i class="close icon removeVis"></i>
     </div>
-    <div class="ui bottom attached label">Key</div>
+    <div class="ui bottom attached label showsOnlyOnVis">
+        <div class="addSeries">
+            <i class="plus icon"></i>
+        </div>
+        <div class="visKeyItem">
+        </div>
+    </div>
 </div>
