--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,6 +25,7 @@
 <script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
 <script type="text/javascript" src="/static/js/data_engine.js"></script>
 <script type="text/javascript" src="/static/js/models/visualisation.js"></script>
+<script type="text/javascript" src="/static/js/messages.js"></script>
 <script type="text/javascript" src="/static/js/index.js"></script>
 <script type="text/javascript" src="/static/js/debug.js"></script>
 </body>
