--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,7 @@
     </div>
 </div>
 <script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
+<script type="text/javascript" src="/static/js/libraries/d3.min.js"></script>
 <script type="text/javascript" src="/static/js/data_engine.js"></script>
 <script type="text/javascript" src="/static/js/models/visualisation.js"></script>
 <script type="text/javascript" src="/static/js/messages.js"></script>
