--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -27,7 +27,7 @@
 <script type="text/javascript" src="/static/js/data_engine.js"></script>
 <script type="text/javascript" src="/static/js/models/series.js"></script>
 <script type="text/javascript" src="/static/js/models/visualisation.js"></script>
-<script type="text/javascript" src="/static/js/messages.js"></script>
+<script type="text/javascript" src="/static/js/insertables.js"></script>
 <script type="text/javascript" src="/static/js/index.js"></script>
 <script type="text/javascript" src="/static/js/debug.js"></script>
 </body>
