[nim] Extracted visualisation control-related functions from index.js for Single Responsibility and readability

--- a/app/templates/index_statics.html
+++ b/app/templates/index_statics.html
@@ -6,5 +6,7 @@
 <script type="text/javascript" src="/static/js/models/series.js"></script>
 <script type="text/javascript" src="/static/js/models/visualisation.js"></script>
 <script type="text/javascript" src="/static/js/insertables.js"></script>
+<script type="text/javascript" src="/static/js/series_controls.js"></script>
+<script type="text/javascript" src="/static/js/visualisation_controls.js"></script>
 <script type="text/javascript" src="/static/js/index.js"></script>
 <script type="text/javascript" src="/static/js/debug.js"></script>
