[nim] Extracted Object and Object Property control functions into separate script. Refactoring

--- a/app/templates/index_statics.html
+++ b/app/templates/index_statics.html
@@ -8,5 +8,6 @@
 <script type="text/javascript" src="/static/js/insertables.js"></script>
 <script type="text/javascript" src="/static/js/series_controls.js"></script>
 <script type="text/javascript" src="/static/js/visualisation_controls.js"></script>
+<script type="text/javascript" src="/static/js/sim_object_controls.js"></script>
 <script type="text/javascript" src="/static/js/index.js"></script>
 <script type="text/javascript" src="/static/js/debug.js"></script>
