[nim] Clicking the start button now starts the simulation

--- a/app/templates/index_statics.html
+++ b/app/templates/index_statics.html
@@ -3,11 +3,13 @@
 <script type="text/javascript" src="/static/js/libraries/rsvp.js"></script>
 <script type="text/javascript" src="/static/js/sim_api.js"></script>
 <script type="text/javascript" src="/static/js/models/session.js"></script>
+<script type="text/javascript" src="/static/js/models/simulation.js"></script>
 <script type="text/javascript" src="/static/js/models/series.js"></script>
 <script type="text/javascript" src="/static/js/models/visualisation.js"></script>
 <script type="text/javascript" src="/static/js/insertables.js"></script>
 <script type="text/javascript" src="/static/js/series_controls.js"></script>
 <script type="text/javascript" src="/static/js/visualisation_controls.js"></script>
 <script type="text/javascript" src="/static/js/sim_object_controls.js"></script>
+<script type="text/javascript" src="/static/js/sim_controls.js"></script>
 <script type="text/javascript" src="/static/js/index.js"></script>
 <script type="text/javascript" src="/static/js/debug.js"></script>
