[nim] Moving forward. Ammend me when done

--- a/app/templates/visualisation_front.html
+++ b/app/templates/visualisation_front.html
@@ -5,6 +5,7 @@
         <i class="plus icon maximiseVis"></i>
         <i class="close icon removeVis"></i>
     </div>
+    <div class="visCanvas showsOnlyOnVis"></div>
     <div class="ui bottom attached label showsOnlyOnVis">
         <div class="addSeries">
             <i class="plus icon"></i>
