--- a/app/templates/index_statics.html
+++ b/app/templates/index_statics.html
@@ -1,6 +1,7 @@
 <script type="text/javascript" src="/static/js/libraries/jquery.1.10.2.min.js"></script>
 <script type="text/javascript" src="/static/js/libraries/d3.min.js"></script>
 <script type="text/javascript" src="/static/js/libraries/rsvp.js"></script>
+<script type="text/javascript" src="/static/js/config.js"></script>
 <script type="text/javascript" src="/static/js/sim_api.js"></script>
 <script type="text/javascript" src="/static/js/models/session.js"></script>
 <script type="text/javascript" src="/static/js/models/simulation.js"></script>
