--- a/app/templates/index_statics.html
+++ b/app/templates/index_statics.html
@@ -14,3 +14,5 @@
 <script type="text/javascript" src="/static/js/sim_controls.js"></script>
 <script type="text/javascript" src="/static/js/index.js"></script>
 <script type="text/javascript" src="/static/js/debug.js"></script>
+<script type="text/javascript" src="/static/js/d3_utils.js"></script>
+<script type="text/javascript" src="/static/js/line_graph.js"></script>
